--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "react": "^16.4.2",
     "react-dom": "^16.4.2",
+    "react-popper": "1.0.2",
     "react-scripts": "1.1.4"
   },
   "devDependencies": {
